--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "frontend"
+  base = "frontend"     
   command = "npm run build"
-  publish = "frontend/build"
+  publish = "build"      
 
 [build.environment]
   NODE_OPTIONS = "--openssl-legacy-provider"
