--- a/.github/workflows/main_cryptorugfinder-backend.yml
+++ b/.github/workflows/main_cryptorugfinder-backend.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd backend
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
 
       - name: Collect Static Files
